--- a/.github/workflows/test-pack-lib.yml
+++ b/.github/workflows/test-pack-lib.yml
@@ -27,6 +27,7 @@ jobs:
       matrix:
         runner:
           - ubuntu-latest
+          - ubuntu-20.04
           - macos-13
           - windows-latest
           - macos-14
@@ -48,18 +49,27 @@ jobs:
             ubuntu-latest)
               echo "OS=linux" >> "$GITHUB_OUTPUT"
               echo "ARCH=x86_64" >> "$GITHUB_OUTPUT"
+              echo "CMD=bin/spc" >> "$GITHUB_OUTPUT"
+              ;;
+            ubuntu-20.04)
+              echo "OS=linux" >> "$GITHUB_OUTPUT"
+              echo "ARCH=aarch64" >> "$GITHUB_OUTPUT"
+              echo 'CMD="SPC_USE_ARCH=aarch64 bin/spc-alpine-docker"' >> "$GITHUB_OUTPUT"
               ;;
             windows-latest)
               echo "OS=windows" >> "$GITHUB_OUTPUT"
               echo "ARCH=x86_64" >> "$GITHUB_OUTPUT"
+              echo "CMD=bin/spc" >> "$GITHUB_OUTPUT"
               ;;
             macos-13)
               echo "OS=darwin" >> "$GITHUB_OUTPUT"
               echo "ARCH=x86_64" >> "$GITHUB_OUTPUT"
+              echo "CMD=bin/spc" >> "$GITHUB_OUTPUT"
               ;;
             macos-14)
               echo "OS=darwin" >> "$GITHUB_OUTPUT"
               echo "ARCH=aarch64" >> "$GITHUB_OUTPUT"
+              echo "CMD=bin/spc" >> "$GITHUB_OUTPUT"
               ;;
           esac
 
@@ -67,6 +77,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Setup PHP"
+        if: matrix.runner != 'ubuntu-20.04'
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.2
@@ -91,23 +102,24 @@ jobs:
           key: pack-lib-dependencies
 
       - name: "Install Dependencies"
+        if: matrix.runner != 'ubuntu-20.04'
         run: composer update -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - run: bin/spc doctor --auto-fix
+      - run: ${{ steps.process-env.outputs.CMD }} doctor --auto-fix
 
-      - run: bin/spc download --for-libs="${{ matrix.lib }}" --debug --retry=5 --shallow-clone
+      - run: ${{ steps.process-env.outputs.CMD }} download --for-libs="${{ matrix.lib }}" --debug --retry=5 --shallow-clone
 
       - name: "Download pre-built pkg-config for ${{ matrix.runner }}"
         if: matrix.runner != 'windows-latest' && matrix.lib != 'pkg-config'
         run: |
-          bin/spc download --for-libs="pkg-config" --debug --retry=5 --shallow-clone --prefer-pre-built
-          bin/spc build:libs pkg-config --debug
+          ${{ steps.process-env.outputs.CMD }} download --for-libs="pkg-config" --debug --retry=5 --shallow-clone --prefer-pre-built
+          ${{ steps.process-env.outputs.CMD }} build:libs pkg-config --debug
 
       - if: matrix.runner != 'windows-latest' || matrix.lib != 'pkg-config'
-        run: bin/spc dev:pack-lib --debug ${{ matrix.lib }}
+        run: ${{ steps.process-env.outputs.CMD }} dev:pack-lib --debug ${{ matrix.lib }}
 
       - name: "Upload packed lib (${{ matrix.lib }} for ${{ steps.process-env.outputs.ARCH }}-${{ steps.process-env.outputs.OS }})"
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           path: dist/${{ matrix.lib }}-${{ steps.process-env.outputs.ARCH }}-${{ steps.process-env.outputs.OS }}.txz
           name: ${{ matrix.lib }}-${{ steps.process-env.outputs.ARCH }}-${{ steps.process-env.outputs.OS }}
