--- a/config/env.ini
+++ b/config/env.ini
@@ -114,7 +114,7 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 ; configure command
 SPC_CMD_PREFIX_PHP_CONFIGURE="./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg"
 ; make command
-SPC_CMD_PREFIX_PHP_MAKE="make -j${SPC_CONCURRENCY}"
+SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
 
 ; *** default build vars for building php ***
 ; CFLAGS for configuring php
