--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">= 8.1",
         "ext-mbstring": "*",
+        "ext-zlib": "*",
         "laravel/prompts": "^0.1.12",
         "symfony/console": "^5.4 || ^6 || ^7",
         "zhamao/logger": "^1.0"
@@ -22,7 +23,7 @@
         "humbug/box": "^4.5",
         "nunomaduro/collision": "^7.8",
         "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^10.3 || ^9"
+        "phpunit/phpunit": "^10.3"
     },
     "autoload": {
         "psr-4": {
