Update env-vars docs

--- a/config/env.ini
+++ b/config/env.ini
@@ -39,12 +39,12 @@
 
 
 [global]
-; Build concurrency for make -jN
+; Build concurrency for make -jN, default is CPU_COUNT, this value are used in every lib and php builds.
 SPC_CONCURRENCY=${CPU_COUNT}
 ; Ignore PHP version check before building some extensions
 SPC_SKIP_PHP_VERSION_CHECK="no"
-; Ignore some check item for bin/spc doctor command, comma separated
-SPC_SKIP_DOCTOR_CHECK_ITEMS="if homebrew has installed"
+; Ignore some check item for bin/spc doctor command, comma separated (e.g. SPC_SKIP_DOCTOR_CHECK_ITEMS="if homebrew has installed")
+SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 
 [windows]
 ; php-sdk-binary-tools path
