Fix linux concurrency build

--- a/config/env.ini
+++ b/config/env.ini
@@ -39,7 +39,7 @@
 
 
 [global]
-; Build concurrency for make -jN, default is CPU_COUNT, this value are used in every lib and php builds.
+; Build concurrency for make -jN, default is CPU_COUNT, this value are used in every libs.
 SPC_CONCURRENCY=${CPU_COUNT}
 ; Ignore PHP version check before building some extensions
 SPC_SKIP_PHP_VERSION_CHECK="no"
@@ -78,7 +78,7 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 ; configure command
 SPC_CMD_PREFIX_PHP_CONFIGURE="${SPC_PHP_DEFAULT_LD_LIBRARY_PATH_CMD} ./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg"
 ; make command
-SPC_CMD_PREFIX_PHP_MAKE="make -j${SPC_CONCURRENCY}"
+SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
 
 ; *** default build vars for building php ***
 ; CFLAGS for configuring php
