--- a/config/env.ini
+++ b/config/env.ini
@@ -48,9 +48,9 @@ SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 
 [windows]
 ; php-sdk-binary-tools path
-PHP_SDK_PATH=${WORKING_DIR}\php-sdk-binary-tools
+PHP_SDK_PATH="${WORKING_DIR}\php-sdk-binary-tools"
 ; upx executable path
-UPX_EXEC=${PKG_ROOT_PATH}\bin\upx.exe
+UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
 
