--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -82,12 +82,12 @@ jobs:
               RUNS_ON="ubuntu-latest"
               ;;
             macos-x86_64)
-              DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc download"
+              DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc doctor --auto-fix && ./bin/spc download"
               BUILD_CMD="./bin/spc build"
               RUNS_ON="macos-13"
               ;;
             macos-aarch64)
-              DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc download"
+              DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc doctor --auto-fix && ./bin/spc download"
               BUILD_CMD="./bin/spc build"
               RUNS_ON="macos-14"
               ;;
