--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -200,6 +200,10 @@ jobs:
       - name: "Run Build Tests (build)"
         run: php src/globals/test-extensions.php build_cmd ${{ matrix.os }} ${{ matrix.php }}
 
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+
       - name: "Run Build Tests (build - embed for non-windows)"
         if: matrix.os != 'windows-latest'
         run: php src/globals/test-extensions.php build_embed_cmd ${{ matrix.os }} ${{ matrix.php }}
