--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -129,7 +129,7 @@ jobs:
       - name: "Setup PHP"
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ inputs.php-version }}
+          php-version: 8.4
           tools: pecl, composer
           extensions: curl, openssl, mbstring
           ini-values: memory_limit=-1
