--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">= 8.1",
+        "php": ">= 8.3",
         "ext-mbstring": "*",
         "ext-zlib": "*",
         "laravel/prompts": "^0.1.12",
@@ -19,7 +19,7 @@
     "require-dev": {
         "captainhook/captainhook-phar": "^5.23",
         "captainhook/hook-installer": "^1.0",
-        "friendsofphp/php-cs-fixer": "^3.25",
+        "friendsofphp/php-cs-fixer": "^3.60",
         "humbug/box": "^4.5.0 || ^4.6.0",
         "nunomaduro/collision": "^7.8",
         "phpstan/phpstan": "^1.10",
@@ -44,7 +44,7 @@
     ],
     "scripts": {
         "analyse": "phpstan analyse --memory-limit 300M",
-        "cs-fix": "php-cs-fixer fix",
+        "cs-fix": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix",
         "test": "vendor/bin/phpunit tests/ --no-coverage",
         "build:phar": "vendor/bin/box compile"
     },
