Add SPC_CMD_VAR_PHP_EMBED_TYPE for embed building in glibc mode

--- a/config/env.ini
+++ b/config/env.ini
@@ -79,6 +79,8 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 SPC_CMD_PREFIX_PHP_CONFIGURE="${SPC_PHP_DEFAULT_LD_LIBRARY_PATH_CMD} ./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg --with-pic"
 ; make command
 SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
+; embed type for php, static (libphp.a) or shared (libphp.so)
+SPC_CMD_VAR_PHP_EMBED_TYPE="shared"
 
 ; *** default build vars for building php ***
 ; CFLAGS for configuring php
@@ -115,6 +117,8 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 SPC_CMD_PREFIX_PHP_CONFIGURE="./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg"
 ; make command
 SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
+; embed type for php, static or shared
+SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 
 ; *** default build vars for building php ***
 ; CFLAGS for configuring php
