Emegency fix env.ini

--- a/config/env.ini
+++ b/config/env.ini
@@ -80,7 +80,7 @@ SPC_CMD_PREFIX_PHP_CONFIGURE="${SPC_PHP_DEFAULT_LD_LIBRARY_PATH_CMD} ./configure
 ; make command
 SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
 ; embed type for php, static (libphp.a) or shared (libphp.so)
-SPC_CMD_VAR_PHP_EMBED_TYPE="shared"
+SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 
 ; *** default build vars for building php ***
 ; CFLAGS for configuring php
