--- a/config/env.ini
+++ b/config/env.ini
@@ -129,6 +129,8 @@ SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="${SPC_PHP_DEFAULT_OPTIMIZE_CFLAGS}"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-lresolv"
+; embed type for php, static (libphp.a) or shared (libphp.dylib)
+SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 
 [freebsd]
 ; compiler environments
