--- a/config/env.ini
+++ b/config/env.ini
@@ -35,7 +35,6 @@
 ;   SPC_LINUX_DEFAULT_CC:                   the default compiler for linux. (For alpine linux: `gcc`, default: `$GNU_ARCH-linux-musl-gcc`)
 ;   SPC_LINUX_DEFAULT_CXX:                  the default c++ compiler for linux. (For alpine linux: `g++`, default: `$GNU_ARCH-linux-musl-g++`)
 ;   SPC_LINUX_DEFAULT_AR:                   the default archiver for linux. (For alpine linux: `ar`, default: `$GNU_ARCH-linux-musl-ar`)
-;   SPC_PHP_DEFAULT_LD_LIBRARY_PATH_CMD:    the default LD_LIBRARY_PATH for php. (linux: `LD_LIBRARY_PATH=/usr/local/musl/$GNU_ARCH-linux-musl/lib`, default: empty)
 
 
 [global]
@@ -45,6 +44,14 @@ SPC_CONCURRENCY=${CPU_COUNT}
 SPC_SKIP_PHP_VERSION_CHECK="no"
 ; Ignore some check item for bin/spc doctor command, comma separated (e.g. SPC_SKIP_DOCTOR_CHECK_ITEMS="if homebrew has installed")
 SPC_SKIP_DOCTOR_CHECK_ITEMS=""
+; EXTENSION_DIR where the built php will look for extension when a .ini instructs to load them
+; only useful for builds targeting glibc --libc=glibc
+; default paths
+; Ubuntu/Debian: /usr/lib/php/{PHP_VERSION}/
+; RHEL: /usr/lib64/php/modules
+; Alpine: /usr/lib/php{PHP_VERSION}/modules
+; where {PHP_VERSION} is 84 for php 8.4
+EXTENSION_DIR=
 
 [windows]
 ; php-sdk-binary-tools path
@@ -63,7 +70,7 @@ CXX=${SPC_LINUX_DEFAULT_CXX}
 AR=${SPC_LINUX_DEFAULT_AR}
 LD=ld.gold
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
-SPC_DEFAULT_C_FLAGS=
+SPC_DEFAULT_C_FLAGS="-fPIC"
 SPC_DEFAULT_CXX_FLAGS=
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
@@ -76,7 +83,7 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 ; buildconf command
 SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 ; configure command
-SPC_CMD_PREFIX_PHP_CONFIGURE="${SPC_PHP_DEFAULT_LD_LIBRARY_PATH_CMD} ./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg --with-pic"
+SPC_CMD_PREFIX_PHP_CONFIGURE="./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg --with-pic"
 ; make command
 SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
 ; embed type for php, static (libphp.a) or shared (libphp.so)
