--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,7 +106,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: "Run PHPUnit Tests"
-        run: vendor/bin/phpunit tests/ --no-coverage
+        run: SPC_LIBC=glibc vendor/bin/phpunit tests/ --no-coverage
 
   define-matrix:
     name: "Define Matrix"
