Update EXTENSION_DIR comments for env.ini

--- a/config/env.ini
+++ b/config/env.ini
@@ -44,7 +44,7 @@ SPC_SKIP_PHP_VERSION_CHECK="no"
 ; Ignore some check item for bin/spc doctor command, comma separated (e.g. SPC_SKIP_DOCTOR_CHECK_ITEMS="if homebrew has installed")
 SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 ; EXTENSION_DIR where the built php will look for extension when a .ini instructs to load them
-; only useful for builds targeting glibc (SPC_LIBC=glibc)
+; only useful for builds targeting not pure-static linking
 ; default paths
 ; Ubuntu/Debian: /usr/lib/php/{PHP_VERSION}/
 ; RHEL: /usr/lib64/php/modules
