Remove SPC_NO_MUSL_PATH, remove --libc, use SPC_LIBC instead (#642)
* Remove SPC_NO_MUSL_PATH, remove --libc, use SPC_LIBC instead

* Fix tests

* Internally use GNU_ARCH for unified

* Update EXTENSION_DIR comments for env.ini

* Remove redundant -fPIC cflags in curl

--- a/config/env.ini
+++ b/config/env.ini
@@ -7,8 +7,11 @@
 ;
 ; We need to use some pre-defined internal env vars, like `BUILD_ROOT_PATH`, `DOWNLOAD_PATH`, etc.
 ; Please note that these vars cannot be defined in this file, they are only be defined before static-php-cli running.
-; Here's a list of these pre-defined internal env vars, these vars are only be defined in the static-php-cli build process if not set in the shell environment:
 ;
+; Here's a list of env vars, these value cannot be changed anywhere:
+;
+;   WORKING_DIR:        the working directory of the build process. (default: `$(pwd)`)
+;   ROOT_DIR:           the root directory of static-php-cli. (default: `/path/to/static-php-cli`, when running in phar or micro mode: `phar://path/to/spc.phar`)
 ;   BUILD_ROOT_PATH:    the root path of the build process. (default: `$(pwd)/buildroot`)
 ;   BUILD_INCLUDE_PATH: the path of the include files. (default: `$BUILD_ROOT_PATH/include`)
 ;   BUILD_LIB_PATH:     the path of the lib files. (default: `$BUILD_ROOT_PATH/lib`)
@@ -17,21 +20,17 @@
 ;   SOURCE_PATH:        the path of the source files. (default: `$(pwd)/source`)
 ;   DOWNLOAD_PATH:      the path of the download files. (default: `$(pwd)/downloads`)
 ;   CPU_COUNT:          the count of the CPU cores. (default: `$(nproc)`)
+;   SPC_ARCH:           the arch of the current system, for some libraries needed `--host=XXX` args. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`, `arm64`)
 ;   GNU_ARCH:           the GNU arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`)
 ;   MAC_ARCH:           the MAC arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `arm64`)
 ;
-; Here's a list of env vars, these value cannot be changed anywhere:
-;
-;   WORKING_DIR:        the working directory of the build process. (default: `$(pwd)`)
-;   ROOT_DIR:           the root directory of static-php-cli. (default: `/path/to/static-php-cli`, when running in phar or micro mode: `phar://path/to/spc.phar`)
-;
-;   * These vars are only be defined in Unix (macOS, Linux, FreeBSD)Builder *
+;   * These vars are only be defined in Unix (macOS, Linux, FreeBSD)Builder and cannot be changed anywhere:
 ;   PATH:                               static-php-cli will add `$BUILD_BIN_PATH` to PATH.
 ;   PKG_CONFIG:                         static-php-cli will set `$BUILD_BIN_PATH/pkg-config` to PKG_CONFIG.
 ;   PKG_CONFIG_PATH:                    static-php-cli will set `$BUILD_LIB_PATH/pkgconfig` to PKG_CONFIG_PATH.
 ;   SPC_PHP_DEFAULT_OPTIMIZE_CFLAGS:    the default optimization CFLAGS for compiling php. (if --no-strip option is set: `-g -O0`, else: `-g -Os`)
 ;
-;   * These vars are only be defined in LinuxBuilder *
+;   * These vars are only be defined in LinuxBuilder and cannot be changed anywhere:
 ;   SPC_LINUX_DEFAULT_CC:                   the default compiler for linux. (For alpine linux: `gcc`, default: `$GNU_ARCH-linux-musl-gcc`)
 ;   SPC_LINUX_DEFAULT_CXX:                  the default c++ compiler for linux. (For alpine linux: `g++`, default: `$GNU_ARCH-linux-musl-g++`)
 ;   SPC_LINUX_DEFAULT_AR:                   the default archiver for linux. (For alpine linux: `ar`, default: `$GNU_ARCH-linux-musl-ar`)
@@ -45,7 +44,7 @@ SPC_SKIP_PHP_VERSION_CHECK="no"
 ; Ignore some check item for bin/spc doctor command, comma separated (e.g. SPC_SKIP_DOCTOR_CHECK_ITEMS="if homebrew has installed")
 SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 ; EXTENSION_DIR where the built php will look for extension when a .ini instructs to load them
-; only useful for builds targeting glibc --libc=glibc
+; only useful for builds targeting not pure-static linking
 ; default paths
 ; Ubuntu/Debian: /usr/lib/php/{PHP_VERSION}/
 ; RHEL: /usr/lib64/php/modules
@@ -63,7 +62,7 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 
 [linux]
 ; include PATH for musl libc.
-SPC_NO_MUSL_PATH=no
+SPC_LIBC=musl
 ; compiler environments
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
