when vendor-mode run composer install

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -93,6 +93,10 @@ on:
         description: Keep debug symbols for debugging
         type: boolean
         default: false
+      vendor-mode:
+        description: Project is in vendor mode
+        type: boolean
+        default: false
 
 env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -108,6 +112,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
+
+      - if: ${{ inputs.vendor-mode }}
+        run: composer install --no-dev --classmap-authoritative
 
       - name: "Define"
         id: gendef
