--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-mbstring": "*",
         "ext-zlib": "*",
         "laravel/prompts": "^0.1.12",
+        "nette/php-generator": "^4.1",
         "symfony/console": "^5.4 || ^6 || ^7",
         "zhamao/logger": "^1.0"
     },
@@ -44,7 +45,7 @@
     ],
     "scripts": {
         "analyse": "phpstan analyse --memory-limit 300M",
-        "cs-fix": "php-cs-fixer fix",
+        "cs-fix": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix",
         "test": "vendor/bin/phpunit tests/ --no-coverage",
         "build:phar": "vendor/bin/box compile"
     },
