--- a/config/env.ini
+++ b/config/env.ini
@@ -68,7 +68,7 @@ CXX=${SPC_LINUX_DEFAULT_CXX}
 AR=${SPC_LINUX_DEFAULT_AR}
 LD=ld.gold
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
-SPC_DEFAULT_C_FLAGS="-fPIC"
+SPC_DEFAULT_C_FLAGS="-fPIC -std=c11"
 SPC_DEFAULT_CXX_FLAGS=
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
@@ -97,7 +97,7 @@ SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; LIBS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LIBS="-ldl -lpthread -lm"
 ; EXTRA_CFLAGS for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie -Os -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -fno-ident -fPIE -fPIC"
+SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie -fPIE -fPIC -Os -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -fno-ident"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-ldl -lpthread -lm"
 ; EXTRA_LDFLAGS_PROGRAM for `make` php
