Check GITHUB_TOKEN in workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -142,6 +142,13 @@ jobs:
         os: ${{ fromJSON(needs.define-matrix.outputs.os) }}
       fail-fast: false
     steps:
+      - name: "Check GITHUB_TOKEN is set"
+        run: |
+          if [ -z "${{ secrets.GITHUB_TOKEN }}" ]; then
+            echo "GITHUB_TOKEN is not set. Exiting."
+            exit 1
+          fi
+
       - name: "Checkout"
         uses: actions/checkout@v4
 
