--- a/config/env.ini
+++ b/config/env.ini
@@ -100,6 +100,8 @@ SPC_CMD_VAR_PHP_CONFIGURE_LIBS="-ldl -lpthread -lm"
 SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie -Os -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -fno-ident -fPIE -fPIC"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-ldl -lpthread -lm"
+; EXTRA_LDFLAGS for `make` php, can use -release to set a soname for libphp.so
+SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS=""
 ; EXTRA_LDFLAGS_PROGRAM for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 
