--- a/config/env.ini
+++ b/config/env.ini
@@ -69,7 +69,7 @@ AR=${SPC_LINUX_DEFAULT_AR}
 LD=ld.gold
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fpic -Os"
-SPC_DEFAULT_CXX_FLAGS="fpic -Os"
+SPC_DEFAULT_CXX_FLAGS="-fpic -Os"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
 ; upx executable path
@@ -91,13 +91,13 @@ SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 ; CFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -fpie"
 ; CPPFLAGS for configuring php
-SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="-I${BUILD_INCLUDE_PATH}"
+SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="${SPC_DEFAULT_CXX_FLAGS} -I${BUILD_INCLUDE_PATH} -fpie"
 ; LDFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; LIBS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LIBS="-ldl -lpthread -lm"
 ; EXTRA_CFLAGS for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -Os -fno-ident -fpic -fpie"
+SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fno-ident -fpie ${SPC_DEFAULT_C_FLAGS}"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-ldl -lpthread -lm"
 ; EXTRA_LDFLAGS for `make` php, can use -release to set a soname for libphp.so
@@ -133,7 +133,7 @@ SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="-I${BUILD_INCLUDE_PATH}"
 ; LDFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; EXTRA_CFLAGS for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie -Os"
+SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie ${SPC_DEFAULT_C_FLAGS}"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-lresolv"
 ; embed type for php, static (libphp.a) or shared (libphp.dylib)
