oops, don't pass -fpic to CPPflags, I misread it as CXXflags

--- a/config/env.ini
+++ b/config/env.ini
@@ -91,7 +91,7 @@ SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 ; CFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -fpie"
 ; CPPFLAGS for configuring php
-SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="${SPC_DEFAULT_CXX_FLAGS} -I${BUILD_INCLUDE_PATH} -fpie"
+SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="-I${BUILD_INCLUDE_PATH}"
 ; LDFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; LIBS for configuring php
